--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,15 @@
 CHANGELOG
 =========
+7.1.5（2016-09-08）
+*新增：直播公开课上传录像视频的课时显示推荐课程的功能
+*新增：课程详情页问答和资料数量显示
+*新增：课程课时管理章目录收展功能
+*优化：邮箱服务器开关和使用关联   
+*优化：应用升级时的界面显示
+*优化：退出课程选择框样式问题
+*修复：创建时更换材料题导致创建失败的问题
+*修复：创建试卷时试题没有分数限制的问题
+
 7.1.4（2016-09-01）
 新增：试卷课时新增次数限制功能
 优化：系统内一系列文案优化
