--- a/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
+++ b/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
@@ -1961,7 +1961,7 @@ type不正确: 'The type is incorrect'
 '课程公告(#%id%)不存在。': 'The course announcement  is not found。'
 课程不存在: 'The course is not found'
 '你好像忘了登录哦？': 'Forgot to log-in？'
-'您还不是课程《%coursTtitle%》的学员，请先购买或加入学习。': 'You are not the member of course，please join-in first。'
+'您还不是课程《%courseTitle%》的学员，请先购买或加入学习。': 'You are not the member of course，please join-in first。'
 '章节(#%chapterId%)不存在！': 'The chapter is not found！'
 '非常抱歉，您无权限访问该班级，如有需要请联系客服': 'Sorry，you have no permission to access.Please contact custom service first。'
 '请前往后台开启直播,尝试创建！': 'Please enable the live function，then try to creat one！'
