--- a/src/Topxia/WebBundle/Resources/translations/messages.zh_CN.yml
+++ b/src/Topxia/WebBundle/Resources/translations/messages.zh_CN.yml
@@ -1916,7 +1916,7 @@ type不正确: type不正确
 '课程公告(#%id%)不存在。': '课程公告(#%id%)不存在。'
 课程不存在: 课程不存在
 '你好像忘了登录哦？': '你好像忘了登录哦？'
-'您还不是课程《%coursTtitle%》的学员，请先购买或加入学习。': '您还不是课程《%coursTtitle%》的学员，请先购买或加入学习。'
+'您还不是课程《%courseTitle%》的学员，请先购买或加入学习。': '您还不是课程《%courseTitle%》的学员，请先购买或加入学习。'
 '章节(#%chapterId%)不存在！': '章节(#%chapterId%)不存在！'
 '非常抱歉，您无权限访问该班级，如有需要请联系客服': '非常抱歉，您无权限访问该班级，如有需要请联系客服'
 '请前往后台开启直播,尝试创建！': '请前往后台开启直播,尝试创建！'
