--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,18 @@
 CHANGELOG
 =========
+7.2.0（2016-09-20）
+后台权限管理系统
+• 支持角色自定义
+• 支持用户管理菜单下的权限分配
+• 支持课程管理菜单下的权限分配
+• 支持运营管理菜单下的权限分配
+• 支持订单管理菜单下的权限分配
+• 支持账单管理菜单下的权限分配
+• 支持教育云管理菜单下的权限分配
+• 支持系统管理菜单下的权限分配
+
+修复：虚拟币非1:1比例下的抵扣金额问题
+
 7.1.5（2016-09-08）
 新增：直播公开课上传录像视频的课时显示推荐课程的功能
 新增：课程详情页问答和资料数量显示
