--- a/src/Topxia/AdminBundle/Resources/translations/messages.en_US.yml
+++ b/src/Topxia/AdminBundle/Resources/translations/messages.en_US.yml
@@ -1673,9 +1673,9 @@ Key生成失败，请检查服务器网络后，重试！: 'Key created failed,p
 '验证密码错误': 'Verfication password is wrong'
 '课程删除成功': 'Delete course successfully'
 课程推荐已取消！: 'Course recommendation has been cancelled'
-'您确认要关闭此课程吗？课程关闭后，仍然还在有效期内的%name%，将可以继续学习。': 'Are you sure want to close the course?student  %name% who are still in the valid service period can still learn the course'
+'您确认要关闭此课程吗？课程关闭后，仍然还在有效期内的学员将可以继续学习。': 'Are you sure want to close the course?The students who are still in the valid service period can still learn the course'
 '课程关闭成功！': 'Course closed successfully'
-'删除课程，将删除课程的%chapter% %part%、课时、%user%等信息。真的要删除该课程吗？': 'Delete the course which means that %chapter% %part%,lesson and %user% information will all be deleted.Are you sure want to proceed ? '
+'删除课程，将删除课程的章节、课时、学员等信息。真的要删除该课程吗？': 'Delete the course which means that chapter,lesson and student information will all be deleted.Are you sure want to proceed ? '
 提醒教师的通知，发送成功！: 'Notification reminding teachers has been sent successfully!'
 真的要取消该课程推荐吗？: 'Are you sure want to cancel the course recommendation?'
 设置推荐课程操作成功!: 'Course recommendation set successfully!'
