translate login page

--- a/src/Custom/WebBundle/Resources/translations/messages.en_US.yml
+++ b/src/Custom/WebBundle/Resources/translations/messages.en_US.yml
@@ -8,3 +8,11 @@
 '当前没有学习任务': 'Currently there is no learning tasks'
 '课程下无课时': 'No class curriculum'
 '请先完成前面课程': 'Please finish in front of the class'
+'欢迎回来': 'Welcome Back'
+'邮箱 / 手机 / 用户名': 'Emall/Phone/Username'
+'输入密码': 'Password'
+'账号': 'Email/Phone/Username'
+'密码': 'Password'
+'七天内自动登录': 'Enalbe auto login for 7 days'
+'登 录': 'Login'
+'忘记密码?': 'Forgot your password?'
