--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,11 @@
 CHANGELOG
 =========
+7.2.8 (2016-10-20)
+新增：课程购买截止日期
+新增：课程评价显示学员当前学习进度
+优化：未登录用户领取优惠码时文案
+优化：考试材料题样式显示
+
 7.2.7（2016-10-18）
 新增：支持阔知学堂APP即时聊天功能
 
