--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 CHANGELOG
 =========
+7.2.9 (2016-10-24)
+新增：定时任务文案提示
+优化：系统优化文案提示
+优化：课程购买截止日期设置
+
 7.2.8 (2016-10-20)
 新增：课程购买截止日期
 新增：课程评价显示学员当前学习进度
