--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,11 @@
 CHANGELOG
 =========
+7.2.10 (2016-10-27)
+优化：管理后台首页全新改版，优化了数据统计项和展示效果
+优化：非课程学员访问已关闭课程时的信息提示
+修复：使用微博账号登录时，在授权页面点击取消返回乱码
+修复：特定型号手机拍照上传头像保存后照片旋转90度
+
 7.2.9 (2016-10-24)
 新增：定时任务文案提示
 优化：系统优化文案提示
