--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 CHANGELOG
 =========
+7.2.11 (2016-10-28)
+优化：阔知学堂APP的API调整
+
 7.2.10 (2016-10-27)
 优化：管理后台首页全新改版，优化了数据统计项和展示效果
 优化：非课程学员访问已关闭课程时的信息提示
