--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,13 @@
 CHANGELOG
 =========
+7.2.13 (2016-11-03)
+新增：批量创建课时，提示课时创建效率
+新增：自定义班级列表默认排序
+优化：系统升级文案提示和背景色优化，提升友好度
+优化：后台首页热门搜索7天搜索数据关键词显示优化
+修复：注册用户自动发送站内信欢迎信失败的问题
+修复：删除章节和侧边栏学习中心部分数据显示乱码的问题
+
 7.2.12 (2016-10-29)
 修复：特定情况下图片上传失败的问题
 
