--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,12 @@
 CHANGELOG
 =========
+7.3.0（2016-11-10）
+新增：云视频字幕功能，支持多达四种字幕切换，视频内容精确掌握
+新增：课程学习数据全新改版，支持课程和课时完课率统计
+新增：系统内部分功能的文案解释
+优化：课时列表拖动功能可视化操作
+优化：系统内文案不一致的问题
+
 7.2.13 (2016-11-03)
 新增：批量创建课时，提示课时创建效率
 新增：自定义班级列表默认排序
