feat: #231205 班级头部vue少一个this

--- a/app/Resources/translations/js.en.yml
+++ b/app/Resources/translations/js.en.yml
@@ -1927,6 +1927,7 @@ goods.show_page.vip_free_learn_new: Free exchange for vip
 goods.show_page.vip_buy: %vipName% free learn
 goods.show_page.vip_upgrade: Upgrade to %vipName% free learn
 goods.show_page.unpublished_tips: The product has not been released. It is not allowed to join or purchase
+goods.show_page.closed_tips: The product is closed, not allowed to join and purchase
 goods.show_page.course_not_buyable_tips: Sorry, this course cannot be learned, please contact the study teacher
 goods.show_page.classroom_not_buyable_tips: Sorry, this classroom cannot be learned, please contact  the study teacher
 goods.show_page.join_expiry_tips: Sorry, this product has expired. Please contact customer service
