--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -839,7 +839,7 @@ buy.payments_disabled_title: Open payment function reminder
 buy.payments_disabled_tips: Since the online school does not open any payment function, the current product does not support purchase. Please contact the online school to open the payment function before purchasing.
 course.buy_failed_tips: 'Soory, the course is bought by someone earlier. Please check next time.'
 course.no_avatar_tips: 'You don''t have an avatar yet, please upload your avatar before enroll the course.<br/> It is more polite to have an avatar.'
-course.remove_students_tips: 'The course has been closed and cannot be studied. If you want the course not to be displayed but students can still continue to study, you can set "Hidden foreground display" in the "Basic Settings" after the course is published.'
+course.remove_students_tips: 'The course has been closed and cannot be studied. If you want the course not to be displayed but students can continue to study, you can set "remove" after the course is published.'
 course.name: 'Course title'
 course.price: Price
 course.price.RMB: '%price% CNY'
