--- a/app/Resources/translations/js.zh_CN.yml
+++ b/app/Resources/translations/js.zh_CN.yml
@@ -1465,7 +1465,7 @@ admin.util.item_delete.delete_success_hint: 删除%name%成功
 admin.shortcut_add_success_hint: 已添加当前页面为常用链接！
 admin.shortcut_delete_success_hint: 删除常用链接成功！
 
-admin.item_bank_exercise.exercise.hide_hint: 题库练习关闭后，仍然还在有效期内的学员将可以继续学习。
+admin.item_bank_exercise.exercise.hide_hint: 题库练习下架后，仍然还在有效期内的学员将可以继续学习。
 admin.item_bank_exercise.exercise.close_success_hint: 题库练习关闭成功!
 admin.item_bank_exercise.exercise.close_hint: 关闭后题库练习将彻底隐藏，学员无法在前台查看
 admin.item_bank_exercise.exercise.delist_hint: 题库联系下架后将不在前台展示，学员无法查看
