feat: #231207 题库关闭刷新

--- a/app/Resources/translations/js.en.yml
+++ b/app/Resources/translations/js.en.yml
@@ -556,7 +556,7 @@ course.manage.publish_title: Confirm the release?
 course.manage.publish_success_hint: The program was published successfully
 course.manage.publish_fail_hint: Publish program failed
 course.manage.close_hint: Students who are still valid after closing cannot continue learning. Exercise caution when performing this operation
-course.manage.hide_hint: The program will not be displayed at the front desk after it is removed, and students will not be able to view it
+course.manage.hide_hint: After the program is removed, it will not be displayed at the front desk, and students will not be able to view it on the home page and list page
 course.manage.close_success_hint: closed successfully
 course.manage.close_fail_hint: Close failed
 course.manage.show_success_hint: Enabled successfully
