feat: #231218 update version

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,17 @@
 CHANGELOG
 ==============
+23.4.6 (2023-12-18)
+主程序
+题库相关：
+【新增】题目列表增加“试题查重”功能，识别重复题目进行编辑删除。
+【新增】题目导入增加新版导入功能介绍。
+【新增】微网校端支持题库章节练习和错题练习的一题一答模式。
+【新增】微网校章节练习、错题练习-测验模式下练习的h5样式优化。
+【修复】批量导入题目时，对导入的错误题目进行删除后，页面无法滑动。
+【修复】在题库-练习管理内点击删除题库无反应。
+【修复】考试课时为自动交卷时--用户考试自动交卷后，解析页面不显示答题卡模块。
+【修复】我的错题本-题目数量显示有误。
+
 23.4.5 (2023-12-11)
 主程序
 课程/班级/题库相关：
