--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -5232,8 +5232,10 @@ admin.course_manage.manage.published_count: >
   已发布：<strong class="inflow-num">%publishedNum%</strong>个
 admin.course_manage.manage.closed_count: >
   已关闭：<strong class="inflow-num">%closedNum%</strong>个
+admin.course_manage.manage.draft_count: >
+  未发布：<strong class="inflow-num">%draftNum%</strong>个
 admin.course_manage.manage.unpublish_count: >
-  未发布：<strong class="inflow-num">%unPublishedNum%</strong>个
+  已下架：<strong class="inflow-num">%unPublishedNum%</strong>个
 admin.course_set_manage.recommend.tips: 优先按推荐序号由小至大排序，未推荐的按创建时间倒序
 admin.course_set_manage.manage.number: 课程编号
 admin.course_manage_modal.manage.number: 计划编号
