--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -5641,8 +5641,10 @@ admin.classroom_manage.manage.published_count: >
   已发布：<strong class="inflow-num">%publishedNum%</strong>个
 admin.classroom_manage.manage.closed_count: >
   已关闭：<strong class="inflow-num">%closedNum%</strong>个
+admin.classroom_manage.manage.draft_count: >
+  未发布：<strong class="inflow-num">%draftNum%</strong>个
 admin.classroom_manage.manage.unpublish_count: >
-  未发布：<strong class="inflow-num">%unPublishedNum%</strong>个
+  已下架：<strong class="inflow-num">%unPublishedNum%</strong>个
 admin.classroom_manage.manage.number_th: %title%编号
 admin.classroom_manage.manage.name_th: %name%名称
 admin.classroom_manage.manage.course_number_th: 课程数
