--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,26 @@
 CHANGELOG
 ==============
+23.4.7（2023.12.28）
+【新增】课程班级题库列表增加已下架状态筛选，增加已下架状态的统计数量。
+【优化】题库导入题目时，表格格式大小与导入文档里的表格不一致。
+【修复】切换英文报错。
+【修复】购买协议内容为空时，后台无法关闭购买协议。
+【修复】批阅试卷/作业编辑评语保存后刷新页面评语未显示。
+【修复】考试时答题保存失败问题。
+【修复】自定义页面表格展示问题
+【修复】更换域名导致课程引流二维码未显示。
+【修复】学员在微信内进入网校-我的学习-我的班级显示乱码。
+APP相关
+【优化】APP上课程标题和微网校保持一致显示两行
+【优化】APP锁屏后不可调整视频的声音、亮度和快进视频，仅支持解锁操作
+【修复】 在IOS内购买免费题库的时候无法购买
+【修复】IOS观看已学过的课时不能拖动进度条
+【修复】华为平板鸿蒙3.0系统闪退
+【修复】安卓APP因图片太大闪退
+【修复】IOS打开课程章节播放自动跳到第一章，而不是停留在当前的章节目录
+【修复】安卓APP答题弹窗提示错误
+【修复】iOS音频播放相关问题
+
 23.4.6 (2023-12-18)
 主程序
 题库相关：
