feat: #102118 新增内容防盗、仅限app学习开关

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -6699,6 +6699,10 @@ admin.setting_course.doc_task_water_mark: 'Doc Water Mark'
 admin.setting_course.doc_task_water_mark_info: 'Doc Water Mark Info'
 admin.setting_course.doc_task_water_mark_info_tips: "For better user experience, it is recommended to combine at most 2 items of information to display. Note: If the user's real name and mobile phone number are not available, it will be displayed as -"
 admin.setting_course.Prevent_copying_test_paper: 'Test paper anti copy'
+admin.setting_course.Only_available_for_learning_on_APP: 'Only available for learning on APP'
+admin.setting_course.Only_available_for_learning_on_APP_tips: 'After turning it on, users can only watch audio and video, live broadcasts, live broadcast replays, and live broadcast tasks on the APP.'
+admin.setting_course.Android_APP_content_theft_prevention: 'Android APP content theft prevention'
+admin.setting_course.Android_APP_content_theft_prevention_tips: 'After turning it on, users cannot take screenshots or record screens when watching audio and video tasks on the Android APP. IOS is not controlled by this button and screen recording is always prohibited.'
 admin.setting_course.course_operation_mode: 'Course operation mode'
 admin.setting_course.course_comments_manage: 'Course commnets manage'
 admin.setting_course.course_review: 'Course review'
