--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,32 @@
 CHANGELOG
 ==============
+24.1.1（2024.01.29）
+PC
+【新增】用户、课程、学员学习数据接口更新。
+【新增】材料题批量设置时提示“材料题不支持批量设置分数/难度/分类”。
+【修复】老数据、课程状态不一致、班级数据量较大造成的班级课程和原课程不同步问题。
+【修复】题目解析-双引号内的公式内容不显示。
+【修复】题目管理列表勾选全选后已选题目数显示为0。
+【修复】考试课时设置及格分数百分比时显示200%。
+【修复】批量导入题目显示一直加载中。
+【修复】学员管理内导出搜索结果的学员信息显示错位。
+【修复】个人信息头像无法保存。
+
+微网校
+【新增】图灵-响应式微网校：课程、 班级列表页改版。
+【修复】修改“章”的名称后，微网校的课程章节名称未能同步更新。
+【修复】微网校题目公式排版显示较乱。
+【修复】微网校题目图片公式显示模糊。
+【优化】班级/课程有效期显示为永久有效改为长期有效。
+
+APP
+【新增】APP防盗录：IOS支持11以上的视频任务禁止录屏，安卓可在后台开启禁止录屏和截屏功能。
+【新增】APP内容防刷：后台开启内容防刷开关后，课程/班级/题库评价将需要图形验证码。
+【新增】支持删除已过期的课程缓存。
+【优化】班级/课程有效期显示为永久有效改为长期有效。
+【优化】APP文案修改：我的收藏内“班级收藏”文案改为“课程收藏”。
+【修复】IOS在APP我的缓存里暂停所有的缓存中的视频，该课程会在我的缓存里不显示。
+
 23.4.7（2023.12.28）
 【新增】课程班级题库列表增加已下架状态筛选，增加已下架状态的统计数量。
 【优化】题库导入题目时，表格格式大小与导入文档里的表格不一致。
