feat: #240228 更新版本和changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,26 @@
 CHANGELOG
 ==============
-24.1.1（2024.01.29）
+24.1.2（2024-02-29）
+PC
+【修复】课程考试试卷总分为1分以下时，无法拖动合格分数的设置条。
+【修复】题库导入表格后选项随机。
+【修复】图灵主题首页标签定位不准确。
+【修复】智能直播—PC端无法观看回放。
+【修复】练习一题一答模式下含中文和引号的公式不显示。
+【修复】直播状态未变更导致PC端无法观看回放。
+【修复】题库—导出题目文档后未显示图片。
+【修复】会员等级介绍—上传图片大于10M时无反应。
+【修复】特别情况下访问课程列表页提示—“API资源不存在”
+
+微网校
+【修复】新版微网校—会员购买页【专属介绍】入口不明显。
+【修复】开启防盗增强后，新版微网校不支持微信内看视频。
+【修复】微网校材料题显示不全。
+【修复】微网校课程订单提交页—价格显示错位。
+【修复】新版微网校—轮播图设置：使用建议尺寸上传，需要手动调整大小。
+【修复】其他已知问题。
+
+24.1.1（2024-01-29）
 PC
 【新增】用户、课程、学员学习数据接口更新。
 【新增】材料题批量设置时提示“材料题不支持批量设置分数/难度/分类”。
@@ -27,7 +47,7 @@ APP
 【优化】APP文案修改：我的收藏内“班级收藏”文案改为“课程收藏”。
 【修复】IOS在APP我的缓存里暂停所有的缓存中的视频，该课程会在我的缓存里不显示。
 
-23.4.7（2023.12.28）
+23.4.7（2023-12-28）
 【新增】课程班级题库列表增加已下架状态筛选，增加已下架状态的统计数量。
 【优化】题库导入题目时，表格格式大小与导入文档里的表格不一致。
 【修复】切换英文报错。
