--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@ CHANGELOG
 ==============
 24.1.2（2024-02-29）
 PC
+【新增】通过教育云对接展示互动直播的网校，直播结束当天可查看直播数据
 【修复】课程考试试卷总分为1分以下时，无法拖动合格分数的设置条。
 【修复】题库导入表格后选项随机。
 【修复】图灵主题首页标签定位不准确。
