--- a/app/Resources/translations/js.zh_CN.yml
+++ b/app/Resources/translations/js.zh_CN.yml
@@ -743,6 +743,7 @@ validate.valid_rangetime.required: 请选择日期区间
 validate.valid_starttime.required: 请选择开始时间
 validate.valid_endtime.required: 请选择结束时间
 validate.valid_email_input.message: 请输入有效的电子邮件地址
+validate.valid_idcard_formate.message: 请输入有效的身份证号码
 validate.valid_url_input.message: 请输入有效的网址
 activity.testpaper_manage.required.number: 请至少输入一位数字
 validate.valid_date_input.message: 请输入有效的日期
