--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -7985,7 +7985,7 @@ admin.setting_course.doc_task_water_mark_info: 文档水印信息
 admin.setting_course.doc_task_water_mark_info_tips: 为了用户体验效果更佳,建议最多组合2项信息显示.注意:若用户的真实姓名和手机号没有则显示为-
 admin.setting_course.Prevent_copying_test_paper: 试卷防复制
 admin.setting_course.Only_available_for_learning_on_APP: 仅限在APP学习
-admin.setting_course.Only_available_for_learning_on_APP_tips: 开启后用户仅限在APP观看音视频、直播、直播回放、只能直播任务。
+admin.setting_course.Only_available_for_learning_on_APP_tips: 开启后用户仅限在APP观看音视频、直播、直播回放、智能直播任务。
 admin.setting_course.Android_APP_content_theft_prevention: 安卓APP内容防盗
 admin.setting_course.Android_APP_content_theft_prevention_tips: 开启后，用户在安卓APP观看音视频任务时无法截屏和录屏。IOS不受此按钮控制，始终禁止录屏。
 admin.setting_course.course_operation_mode: 课程运营模式
