feat: #94777 修改课程导入学员错误文案

--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -2576,8 +2576,8 @@ keywordType参数不正确: 'keywordType parameter is not correct'
 'Excel超过1000行数据!': 'Excel data over 1000 lines!'
 '缺少必要的字段': 'Missing required field'
 '第 %row%行的信息有误，用户数据不存在，请检查。': 'The %row% of the information is incorrect, the user data does not exist, please check.'
-'第%col%列重复，重复内容如下:': 'Column number %col% is duplicated, repeat as follows:'
-'第%row%行：%key%': 'Row number %row%: %key%'
+'第%col%列重复:': 'Column number %col% is duplicated:'
+'第%row%行    %key%': 'Row number %row%   %key%'
 '购买课程《%title%》(管理员添加)': 'Purchase course "%title%" (allow the administrator to add)'
 'Excel格式不正确': 'Excel format is not correct!'
 'Excel超过1000行数据': 'Excel data over 1000 lines!'
