--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -10938,6 +10938,7 @@ exception.exercise.forbidden_duplicate_commit_exercise: 练习已经做完，不
 exception.exercise.not_found_result: 练习结果不存在
 exception.exercise.exercise_is_doing: 已存在练习记录，请重新开始答题
 exception.exercise.exercise_not_do: 该练习不能进行答题，请退出重新开始
+exception.exercise.lack_question: 题目数与老师设定不一致，请联系老师处理！
 exception.uploadfile.file_not_found: 文件不存在
 exception.uploadfile.forbidden_manage_file: 没有权限管理资源
 exception.uploadfile.error_status: 状态不正确
