--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,27 @@
 CHANGELOG
 ==============
+24.1.3（2024-03-21）
+PC
+【新增】单选/多选/不定项选择题的选项数量增加到20个。
+【新增】商城-商品简介内上传图片时，超过10M的图片增加弹窗提示。
+【新增】实名认证:身份证号加格式校验。
+【优化】题库管理：题目分类支持拖动。
+【优化】课程/班级/题库批量导入学员：校验文案提示修改。
+【修复】学员从手机浏览器进入我的学习-长期有效的班级显示已过期。
+【修复】课程详情页-加入前：左上角路由增加分类展示。
+【修复】导入网络视频不能全屏播放。
+【修复】运营—app装修：课程列表模块选择自定义添加课程无法搜索到相关课程。
+【修复】题库管理：题目管理手动添加填空题时，选项空识别的答案不完整。
+【修复】练习任务：删除题目后导致实际数量小于设定的题目数，学员端显示500。
+
+微网校
+【修复】响应式微网校-我的学习-我的班级不显示课程。
+【修复】提交试卷查看解析时出现“你已提交不能再次提交” 提示。
+【修复】新版微网校云指纹所有用户默认显示“1”的问题。
+
+APP
+【新增】后台APP内容防盗按钮控制IOS端视频防录制，开启后不可录屏和投屏。
+
 24.1.2（2024-02-29）
 PC
 【新增】通过教育云对接展示互动直播的网校，直播结束当天可查看直播数据
