feat: #240509 AI题目解析后台开关和学员端生成AI解析的接口

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -11196,3 +11196,8 @@ task.app_modal.app: APP
 task.app_modal.learning: Continue learning
 task.app_modal.use: Use mobile phone
 task.app_modal.sweep: sweep
+
+admin_v2.question.ai_analysis.teacher_ebable: AI Question Analysis (Teacher Side)
+admin_v2.question.ai_analysis.teacher_ebable.tip: After it is opened, the teacher can generate AI analysis when creating/importing questions, and edit the generated content.
+admin_v2.question.ai_analysis.student_ebable: AI Question Analysis (Student Side)
+admin_v2.question.ai_analysis.student_ebable.tip: After it is opened, the student can generate AI analysis for the question without analysis.
