feat: #240510 update changelog and version

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,21 @@
 CHANGELOG
 ==============
+24.2.2（2024-05-10）
+PC
+【修复】课时管理拖动顺序，刷新后又回到原位置。
+【修复】在课程详情页查看学习目录章节名出现重复。
+
+微网校
+【修复】在微信端收藏网校链接或扫描PC课程二维码后分享出去的卡片展示网校logo,文字内容展示网站标题和副标题。
+【修复】学员在浏览器内打开网校进行题库问答题批阅，页面无法上滑进行评分。
+
+安卓APP
+【修复】学员端浏览未购买班级，从班级商品详情页查看班级中课程，需要看到课程简介、目录和评价。
+【修复】安卓app-直播公开课列表页，无法进入直播间。
+【修复】安卓app 题库列表页，按照收费筛选有误。
+【修复】安卓app内文档课时无法放大观看。
+【修复】安卓--考试题目选项过多时，解析页面只显示一部分答案。
+
 24.2.1（2024-04-26）
 PC
 【新增】材料题-题干无解析内容时，学员端不展示题干解析模块。
